# rmin

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: add.rs  compare-rmin.rs  panic.rs  simple.rs
rmin/: Cargo.toml  build.rs  example-packer.sh
rmin-eh/: Cargo.toml
rmin-eh/src/: emcc.rs  gcc.rs  lib.rs
rmin-example-latex-table/: .Rbuildignore  Cargo.toml  DESCRIPTION  NAMESPACE  pack.sh
rmin-example-latex-table/.cargo/: config.toml
rmin-example-latex-table/R/: rt.R
rmin-example-latex-table/man/: LatexTableTemplate-class.Rd  lt.Rd
rmin-example-latex-table/src/: Makevars  Makevars.win  caption.rs  column.rs  data.rs  lib.rs  row.rs  table.rs  table_content.rs
rmin-example-parallel-settings/: .Rbuildignore  Cargo.toml  DESCRIPTION  NAMESPACE  pack.sh
rmin-example-parallel-settings/R/: cores.R
rmin-example-parallel-settings/src/: Makevars  Makevars.win  lib.rs
rmin-examples/: Cargo.toml
rmin-examples/R-package-demo/: .gitignore
rmin-examples/R-package-demo/rext/: .Rbuildignore  DESCRIPTION  NAMESPACE
rmin-examples/R-package-demo/rext/R/: extendr-wrappers.R  rmin-funcs.R
rmin-examples/R-package-demo/rext/src/: Makevars  Makevars.win  rext-win.def
rmin-examples/R-package-demo/rext/src/rust/: Cargo.toml
rmin-examples/R-package-demo/rext/src/rust/src/: lib.rs
rmin-examples/src/: compare-rextendr.rs.txt  lib.rs
rmin-macros/: Cargo.toml
rmin-macros/src/: get_name.rs  get_sig.rs  lib.rs
rmin/src/: base.no-std.rs  base.no-std.unwind.rs  base.rs  base.s.r-type.lib-r.rs  base.s.r-type.rs  base.s.rs  lib.rs
src/: RType.rs  S.rs  base.no-std.rs  base.no-std.unwind.rs  base.rs  base.s.r-type.lib-r.rs  base.s.r-type.rs  base.s.rs  doc.rs  handle_panic.rs  lib.rs  libR.rs  macros.rs
src/libR/: S.rs  mod.rs
