[package]
name = "rmin"
version = "0.2.1"
edition = "2021"
description = "A minimal Rust lib for writting R extensions"
authors = ["Neutron3529 <qweytr1@main.ustc.edu.cn>"]
license-file = "LICENSE"
repository = "https://github.com/Neutron3529/rmin"


[features]
default=["std"]
std = []
public-all = []

[[example]]
name = "compare-rmin"
crate-type = ["cdylib"]
