[lib]
proc-macro = true

[package]
name = "rmin-macros"
version = "0.0.2"
edition = "2021"
description = "A minimal Rust lib for writting R extensions"
authors = ["Neutron3529 <qweytr1@main.ustc.edu.cn>"]
license = "AGPL-3.0"
repository = "https://github.com/Neutron3529/rmin"

[features]
camel-ass = []
warning-on-empty-sig = []
verbose-output = []

[dependencies]

