[package]
name = "rmin"
version = "0.4.0-pre2"
edition = "2021"
description = "A minimal Rust lib for writting R extensions"
authors = ["Neutron3529 <qweytr1@main.ustc.edu.cn>"]
license = "AGPL-3.0"
repository = "https://github.com/Neutron3529/rmin"


[features]
default = ["core", "panic-info-message", "rmin-macros-warning", "rmin-macros-write-r-func-to-out-dir"]
public-by-default-even-public-all-is-not-set = []
std = []
core = ["rmin-eh"]
public-all = []
min-import = []
panic-info-message = []
register-routines = []
rmin-eh = ["dep:rmin-eh"]
rmin-macros = ["dep:rmin-macros", "register-routines"]
rmin-macros-warning = ["rmin-macros/warning-on-empty-sig"]
rmin-macros-verbose = ["rmin-macros/verbose-output"]
rmin-macros-camel-ass-wrapper = ["rmin-macros", "rmin-macros/camel-ass"]
rmin-macros-write-r-func-to-out-dir = ["rmin-macros", "rmin-macros/write-r-func-to-out-dir"]

[dependencies]
rmin-eh = { version = "0.0.1", path = "../rmin-eh", optional = true }
rmin-macros = { version = "0.0.3", path = "../rmin-macros", optional = true }
